src/App.css
.App {
  text-align: center;
}

.App-header {
  background-color: #e4e7f7;
  height: 50px;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  font-size: calc(10px + 2vmin);
  color: #ffffff;
  padding: 20px;
  cursor: default;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 4;
}

.movies {
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  align-items: center;
}

/* .App-header h2 {
  margin: 0;
} */

.movie {
  padding: 15px 15px 15px 15px;
  margin: 15px 25px 15px 25px;
  width: 50%;
  /* border: solid; */
  border-radius: 30px;
  height: auto;
  box-shadow: 0px 0px 6px 4px rgba(0, 0, 0, 0.31);
}

.posters {
  border-radius: 20px;
  display: block;
  width: 7em;
  height: auto;
  margin: 0.2em;
}

.posters:hover {
  box-shadow: 0px 0px 2px 6px rgba(237, 217, 3, 0.54);
}

.movie-card {
  display: flex;
}

.movie-card-info {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}
.title-year {
  text-align: left;
  margin: 1.5em;
}

.more-info {
  text-align: left;
  margin: 1.5em;
}

.side-sheet {
  background-color: #e1e3eb;
}
.side-poster-container {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  position: absolute;
  background-color:#e1e3eb;
}

.side-poster {
  width: 70%;
  margin: 1em;
  border-radius: 30px;
  box-shadow: 0px 0px 8px 5px rgba(184,182,184,1);
}

.title-card {
  background-color: white;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  position: absolute;
  width: 90%;
  height: 40%;
  border-radius: 30px;
  box-shadow: 0px 10px 8px 5px rgba(199,199,199,1);
  margin-top: 27em;
  margin-left: 2em;
}

.add-button {
  margin-top: -5em;
  margin-bottom: 1em;
  border: solid;
  border-color: green;
  border-width: 1px;
  border-radius: 5px
}

.errorMessage {
  margin: auto;
  margin-top: 1em;
}

.search {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  margin-top: 7em;
  margin-bottom: 1em;
}

#search-bar {
  border-radius: 30px;
}

#search-button {
  margin-left: 0.5em;
  border-radius: 30px;
}

